; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/marvell/extr_hash.c_mv_cesa_sha1_import.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/marvell/extr_hash.c_mv_cesa_sha1_import.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahash_request = type { i32 }
%struct.sha1_state = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ahash_request*, i8*)* @mv_cesa_sha1_import to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mv_cesa_sha1_import(%struct.ahash_request* %0, i8* %1) #0 {
  %3 = alloca %struct.ahash_request*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sha1_state*, align 8
  store %struct.ahash_request* %0, %struct.ahash_request** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.sha1_state*
  store %struct.sha1_state* %7, %struct.sha1_state** %5, align 8
  %8 = load %struct.ahash_request*, %struct.ahash_request** %3, align 8
  %9 = load %struct.sha1_state*, %struct.sha1_state** %5, align 8
  %10 = getelementptr inbounds %struct.sha1_state, %struct.sha1_state* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.sha1_state*, %struct.sha1_state** %5, align 8
  %13 = getelementptr inbounds %struct.sha1_state, %struct.sha1_state* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.sha1_state*, %struct.sha1_state** %5, align 8
  %16 = getelementptr inbounds %struct.sha1_state, %struct.sha1_state* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @mv_cesa_ahash_import(%struct.ahash_request* %8, i32 %11, i32 %14, i32 %17)
  ret i32 %18
}

declare dso_local i32 @mv_cesa_ahash_import(%struct.ahash_request*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
